Standardize project structure and fix CI/CD paths