@@ -7,38 +7,52 @@ import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 class GlobalExceptionHandlerTest {
 
     private final GlobalExceptionHandler handler = new GlobalExceptionHandler();
 
     @Test
-    void handleRuntimeException_ShouldReturnBadRequest() {
-        RuntimeException ex = new RuntimeException("Test error");
-        ResponseEntity<String> response = handler.handleRuntimeException(ex);
-
-        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        assertEquals("Test error", response.getBody());
-    }
-
-    @Test
-    void handleValidationExceptions_ShouldReturnMapOfErrors() {
+    void testHandleValidationExceptions() {
         MethodArgumentNotValidException ex = mock(MethodArgumentNotValidException.class);
         BindingResult bindingResult = mock(BindingResult.class);
-        FieldError fieldError = new FieldError("objectName", "field", "defaultMessage");
+        FieldError fieldError = new FieldError("objectName", "fieldName", "errorMessage");
 
         when(ex.getBindingResult()).thenReturn(bindingResult);
-        when(bindingResult.getAllErrors()).thenReturn(List.of(fieldError));
+        when(bindingResult.getAllErrors()).thenReturn(Collections.singletonList(fieldError));
 
         ResponseEntity<Map<String, String>> response = handler.handleValidationExceptions(ex);
 
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
-        assertEquals("defaultMessage", response.getBody().get("field"));
+        Map<String, String> body = response.getBody();
+        assertNotNull(body);
+        assertEquals("errorMessage", body.get("fieldName"));
+    }
+
+    @Test
+    void testHandleRuntimeException() {
+        RuntimeException ex = new RuntimeException("Runtime Error");
+        ResponseEntity<String> response = handler.handleRuntimeException(ex);
+
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+        String body = response.getBody();
+        assertNotNull(body);
+        assertEquals("Runtime Error", body);
+    }
+
+    @Test
+    void testHandleException() {
+        Exception ex = new Exception("General Error");
+        ResponseEntity<String> response = handler.handleException(ex);
+
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+        String body = response.getBody();
+        assertNotNull(body);
+        assertTrue(body.contains("General Error"));
     }
 }
